test/langtools/tools/javac/records/fields/NoAddInstanceFieldsCanBeDeclaredInDatumTest.out
NoAddInstanceFieldsCanBeDeclaredInDatumTest.java:9:13: compiler.err.record.fields.must.be.in.header
1 error
